# kitpos

./: .gitignore  CLAUDE.md  HANDOFF.md  MAVERICK_CHAT_CONTEXT.md  MONOREPO_STATUS.md  NEW_CHAT_CONTEXT.md  README.md  kit-api-reference.html
.github/workflows/: update-n8n.yml
agents/amazon-purchase-agent/: .gitignore  config.py  main.py  models.py  requirements.txt  save_session.py  test_add_4_items.py  test_cart_flow.py  test_login.py  test_merchant_order.py
agents/kit-dashboard-agent/: .gitignore  README.md  pyproject.toml
agents/kit-dashboard-agent/src/kit_agent/: cli.py  kit_orchestrator.py  models.py
agents/kit-dashboard-agent/src/kit_agent/parsers/: kit_documents.py  ocr_micr.py
agents/kit-dashboard-agent/src/kit_agent/services/: kit_dashboard.py
agents/kit-dashboard-merchant-data/: .env.example  .gitignore  AGENT_CONTEXT.md  README.md  pyproject.toml
agents/kit-dashboard-merchant-data/src/merchant_data/: cli.py  models.py
agents/kit-dashboard-merchant-data/src/merchant_data/services/: kit_api.py  kit_branding.py  kit_merchant_lookup.py  kit_onboarding.py  kit_var_downloader.py  run_logger.py
agents/maverick-terminal-agent/: .gitignore  README.md  pyproject.toml  server.py
agents/maverick-terminal-agent/config/: field_aliases.json
agents/maverick-terminal-agent/docs/: B_AND_B_CHILL_BLEND_RUN_NOTES.md  KIT_DASHBOARD_INTEGRATION.md  N8N_INTEGRATION.md  PAXSTORE_AUTOMATION_V2.md  PAXSTORE_LOGIN_TEST.md  PAXSTORE_PROVISIONING_RULES.md  PAXSTORE_RECORDED_FLOW.md
agents/maverick-terminal-agent/scripts/: activate_task_v2.py  create_terminal_v2.py  explore_template_v2.py  fill_tsys_v2.py  install_broadpos_app.py  install_via_push_template.py  paxstore_login_probe.py  paxstore_provision_from_pdf.py  push_firmware_v2.py  push_template_v2.py
agents/maverick-terminal-agent/src/maverick_agent/: cli.py  config.py  models.py  orchestrator.py
agents/maverick-terminal-agent/src/maverick_agent/parsers/: var_pdf.py
agents/maverick-terminal-agent/src/maverick_agent/paxstore_v2/: __init__.py  browser.py  field_ids.py  forms.py  operations.py
agents/maverick-terminal-agent/src/maverick_agent/services/: inbox.py  kit_var_api.py  paxstore.py  session_store.py
agents/maverick-terminal-agent/tests/: test_kit_dashboard_integration.py  test_paxstore_workflow_plan.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SETUP.md  var-api-integration-guide.md
scripts/: ingest_email.py  ingest_email_batch.sh  ingest_eml_batch.sh  ingest_eml_dir.py  ingest_one_eml.py  install-all.sh
wiki/: index.md  log.md  overview.md
wiki/concepts/: application-onboarding.md  dda-update-flow.md  delivery-vendors.md  file-build-flow.md  kit-api.md  (+6 more)
(+33 files in other folders)
